test/test_return_outside_function/test_return_outside_function.myout
error: A return statement must be inside a block.
 --> test/test_return_outside_function/test_return_outside_function.mvs:1:1
  |
1 | return 0;
  | ^
  |
hint: Try putting this statement inside of a block or function.
